# OrionGL

./: CMakeLists.txt  LICENSE  README.md  config.h.in
assets/: solar_system.json
cmake/: add_dependencies.cmake  add_project_core.cmake  add_project_main.cmake  add_project_sample.cmake  add_project_tests.cmake  environment_configuration.cmake  install_configuration.cmake  install_engine.cmake  install_sample_configuration.cmake  policies.cmake
include/: Camera.h  Constants.h  Corp.h  Engine.h  Entity.h  FragmentShader.h  Instances.h  JsonParser.h  Light.h  Material.h  Mesh.h  Model.h  Program.h  RenderSystem.h  Renderer.h  ResourceManager.h  ResourceManagers.h  ResourceSystem.h  Scene.h  Shader.h  System.h  Texture.h  Utils.h  VertexShader.h  Window.h  WindowSystem.h
samples/: CMakeLists.txt
samples/orion-sample/: BoxesRenderer.cpp  CMakeLists.txt  main.cpp
samples/orion-sample/include/: BoxesRenderer.h
samples/solar-system/: CMakeLists.txt  Corp.cpp  PlanetRenderer.cpp  main.cpp
samples/solar-system/cmake/: add_project_sample.cmake  install_sample_configuration.cmake  package_configuration.cmake
samples/solar-system/include/: Constants.h  Corp.h  JsonParser.h  PlanetRenderer.h
samples/solar-system/platform/linux/: Constants.cpp
samples/solar-system/shaders/: frag-1.glsl  frag-light.glsl  shader-1.glsl
src/: Camera.cpp  Corp.cpp  FragmentShader.cpp  Instances.cpp  JsonParser_nlohmann.cpp  Main.cpp  Material.cpp  Mesh.cpp  Model.cpp  Program.cpp  ResourceManager.cpp  Shader.cpp  System.cpp  Texture.cpp  Utils.cpp  VertexShader.cpp  Window.cpp  main.cpp
src/core/: Camera.cpp  Corp.cpp  Engine.cpp  Instances.cpp  RenderSystem.cpp  Renderer.cpp  ResourceManager.cpp  ResourceManagers.cpp  ResourceSystem.cpp  System.cpp  WindowSystem.cpp
src/graphics/: FragmentShader.cpp  Material.cpp  Mesh.cpp  Model.cpp  Program.cpp  Shader.cpp  Texture.cpp  VertexShader.cpp  Window.cpp  glad.c
src/plataform/linux/: Constants.cpp
src/platform/linux/: Constants.cpp
src/utils/: Utils.cpp
tests/: test_window.cpp
